tests/integration/errors/test_namespace_reserved_keyword.sn
// Test: Using reserved keyword 'for' as namespace name
// Reserved keywords cannot be used as namespace identifiers
import "../lib/math_basic" as for

fn main(): void =>
    var x: int = for.add(1, 2)
    print($"{x}\n")
